--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf8" />
 	
 	<!-- link vers CSS -->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 
 
 	<!-- link google fonts ROBOTO-->
