Paul First Commit

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
 	
-
+<h3> Salut c'est Paul </h3>
 <h3>Chapitre 1</h3>
 
 	<p>Il est important que les gens pr&eacute;cisent dans quel camp ils se rangent et pourquoi, et s’ils pourraient &ecirc;tre de parti pris. Une d&eacute;claration d’int&eacute;r&ecirc;ts de la part des membres, en quelque sorte. Donc, je vais vous parler de lecture. Je vais vous dire que les biblioth&egrave;ques sont importantes. Je vais sugg&eacute;rer que lire de la fiction, lire pour le plaisir, est une des plus importantes activit&eacute;s à laquelle on puisse s’adonner. Je vais lancer un appel passionn&eacute; pour que les gens comprennent ce que sont les biblioth&egrave;ques et les biblioth&eacute;caires, et qu’il faut les pr&eacute;server.</p>
